<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.safedata</groupId>
    <artifactId>spring-boot.training</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Spring &amp; Spring Boot training</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
    </parent>

    <inceptionYear>2017</inceptionYear>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>
                Copyright 2017-2025 the original author or authors. Licensed under the Apache License, Version 2.0
                (the "License"); you may not use this file except in compliance with the License.
                You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0
            </comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>bogdan.solga</id>

            <name>Bogdan Solga</name>
            <organization>SafeData Net</organization>

            <email>bogdan.solga@gmail.com</email>
            <url>https://learnmicroservices.com</url>
        </developer>
    </developers>

    <modules>
        <module>domain-model</module>
        <module>jpa-domain-model</module>

        <module>d01</module>
        <module>d02</module>
        <module>d03</module>
        <module>d04</module>

        <module>your-own-self-built-project</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <restassured.version>5.5.1</restassured.version>

        <spring-boot.version>3.4.4</spring-boot.version>

        <testng.version>7.11.0</testng.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${restassured.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>net.safedata</groupId>
                <artifactId>domain-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>net.safedata</groupId>
                <artifactId>jpa-domain-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>

                <exclusions>
                    <exclusion>
                        <groupId>org.apache.tomcat.embed</groupId>
                        <artifactId>tomcat-embed-el</artifactId>
                    </exclusion>

                    <exclusion>
                        <groupId>org.apache.tomcat.embed</groupId>
                        <artifactId>tomcat-embed-websocket</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>

                <exclusions>
                    <exclusion>
                        <groupId>org.assertj</groupId>
                        <artifactId>assertj-core</artifactId>
                    </exclusion>

                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                    
                    <exclusion>
						<groupId>org.junit.vintage</groupId>
						<artifactId>junit-vintage-engine</artifactId>
					</exclusion>

                    <exclusion>
                        <groupId>org.skyscreamer</groupId>
                        <artifactId>jsonassert</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
